--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -6,9 +6,30 @@
   position: relative;
   height: 100vh;
 
+  .overlay-transition {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background-color: black;
+    opacity: 0;
+    transition: opacity 1s ease-out;
+    z-index: 5;
+  }
+  .overlay-transition-black {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background-color: black;
+    opacity: 1;
+    z-index: 5;
+    transition: opacity 1s ease-in;
+   }
+
 }
-
-
 
 // CSS HOME PAGE
 .hero-banner {
@@ -49,6 +70,7 @@
     transition: all .5s;
     box-shadow: 0px 1px 2px rgba(0,0,0,.2);
     white-space: nowrap; // Empêche le texte de se dérouler en plusieurs lignes
+    z-index: 6;
   }
   .btn-cta span {
     position: absolute;
