--- a/app/assets/stylesheets/parties/_show.scss
+++ b/app/assets/stylesheets/parties/_show.scss
@@ -11,6 +11,12 @@
     background-attachment: fixed;
   }
 
+  .titre-party-page {
+    text-align: center;
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+
   .border-chat {
     height: 100vh;
   }
