--- a/app/views/characters/_card_index_character.html.erb
+++ b/app/views/characters/_card_index_character.html.erb
@@ -11,14 +11,12 @@
       </div>
     </div>
 
-    <div class="character_card_container_photo" >
-        <%= cl_image_tag character.photo.key, alt: character.name %>
+    <div class="character_card_container_photo">
+      <%= cl_image_tag character.photo.key, alt: character.name %>
     </div>
-
   </div>
 
   <div class="show-character-btn">
-    <button class="button-donjons-et-dragons">Afficher personnage</button>
+    <%= link_to 'Afficher personnage', character_path(character), class: 'button-donjons-et-dragons' %>
   </div>
-
 </div>
