modif des perso

--- a/app/views/characters/_card_index_character.html.erb
+++ b/app/views/characters/_card_index_character.html.erb
@@ -1,3 +1,4 @@
+<%# app/views/characters/_card_index_character.html.erb %>
 <div class="character_card_container">
   <div class="character_card_container_content_and_photo">
     <div class="character_card_container_content">
