--- a/app/assets/stylesheets/components/_card_index_character.scss
+++ b/app/assets/stylesheets/components/_card_index_character.scss
@@ -1,3 +1,10 @@
+.characters-cards {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 16px; /* Espacement entre les cartes */
+  justify-content: center;
+}
+
 .character_card_container {
   background-color: white;
   border-radius: 4px;
