--- a/app/assets/stylesheets/components/_card_index_character.scss
+++ b/app/assets/stylesheets/components/_card_index_character.scss
@@ -5,7 +5,7 @@
   justify-content: center;
 }
 
-.character_card_container {
+.character_card_container_front {
   background-color: white;
   border-radius: 4px;
   color: black;
@@ -15,7 +15,7 @@
 
   .character_card_container_content {
     padding: 10px;
-    background-color: #ffed138c;
+    background-color: #9494948c;
     border-radius: 5px;
     margin: 10px;
     height: fit-content;
@@ -67,9 +67,9 @@
     position: absolute;
     margin: -15px;
 
-    button {
+    a {
       position: absolute;
-      right: -359px;
+      right: -380px;
       bottom: -56px;
       box-shadow: 0px -10px 32px -6px rgba(84,84,84,0.75);
     }
