--- a/app/assets/stylesheets/dashboard/_home.scss
+++ b/app/assets/stylesheets/dashboard/_home.scss
@@ -11,13 +11,18 @@
     text-decoration: none;
   }
 
+  button {
+    width: 240px;
+    font-weight: bold;
+  }
+
   .mes-personnages {
     position: relative;
 
-    .boutton-mes-personnages{
+    button {
       position: absolute;
-      bottom: 325px;
-      left: -94px;
+      bottom: 254px;
+      left: -87px;
     }
 
 
@@ -26,28 +31,20 @@
   .mes-parties {
     position: relative;
 
-    .boutton-mes-parties{
+    button{
       position: absolute;
-      top: 442px;
-      left: -192px;
+      top: 386px;
+      left: -238px;
     }
   }
 
   .mes-messages {
     position: relative;
 
-    .boutton-mes-messages{
+    button {
       position: absolute;
-      bottom: 660px;
-      left: 65px;
-      font-size: larger;
-      font-weight: bold;
-      box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-      border: 3px solid;
-      border-color: #fdda11;
-      border-radius: 30%;
-      color: white;
-      background-color: #00000073;
+      bottom: 643px;
+      left: 8px;
 
       &:hover {
         background-color: #a50606;
