MES parties FINIIIIIIIII

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -11,5 +11,6 @@
 @import "title_page_top";
 @import "cursor";
 @import "loader";
-@import "card_index_character"
-
+@import "card_index_character";
+@import "card_party";
+@import "bg-opacity";
