--- a/app/assets/stylesheets/universes/_background-by-universe.scss
+++ b/app/assets/stylesheets/universes/_background-by-universe.scss
@@ -25,3 +25,16 @@
 .runequest::after {
   background-image: url('background-runequest.jpg');
 }
+
+
+.donjons-et-dragons-bg {
+  background-image: url('background-dnd.jpg');
+}
+
+.call-of-cthulhu-bg {
+  background-image: url('background-cthulhu.jpg');
+}
+
+.runequest-bg {
+  background-image: url('background-runequest.jpg');
+}
